--- a/po/el.po
+++ b/po/el.po
@@ -6706,7 +6706,7 @@ msgid ""
 "Please see the documentation on how to update your column_comments table"
 msgstr ""
 "Παρακαλώ διαβάστε στην τεκμηρίωση για το πως μπορείτε να ανανεώσετε τον "
-"πίνακα Column_comments"
+"πίνακα column_comments"
 
 #: libraries/relation.lib.php:120 libraries/sql_query_form.lib.php:370
 msgid "Bookmarked SQL query"
