--- a/po/de.po
+++ b/po/de.po
@@ -4,8 +4,8 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-25 14:55+0200\n"
-"Last-Translator: Sven Strickroth <email@cs-ware.de>\n"
+"PO-Revision-Date: 2011-07-29 13:39+0200\n"
+"Last-Translator:  <mrbendig@mrbendig.com>\n"
 "Language-Team: german <de@li.org>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
@@ -1209,7 +1209,6 @@ msgid "Pause monitor"
 msgstr "Überwachung pausieren"
 
 #: js/messages.php:114
-#, fuzzy
 #| msgid "general_log and slow_query_log is enabled."
 msgid "general_log and slow_query_log are enabled."
 msgstr "general_log und slow_query_log sind aktiviert."
