--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 13:39+0200\n"
+"PO-Revision-Date: 2011-07-29 13:40+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -7392,7 +7392,7 @@ msgstr "Εμφάνιση διαστάσεων πινάκων"
 
 #: libraries/schema/User_Schema.class.php:379
 msgid "Display all tables with the same width"
-msgstr "εμφάνιση όλων των πινάκων με το ίδιο πλάτος;"
+msgstr "Εμφάνιση όλων των πινάκων με το ίδιο πλάτος;"
 
 #: libraries/schema/User_Schema.class.php:384
 msgid "Only show keys"
