--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 13:40+0200\n"
+"PO-Revision-Date: 2011-07-29 13:41+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -8634,8 +8634,8 @@ msgid ""
 "killing threads of other users."
 msgstr ""
 "Επιτρέπει τη σύνδεση, ακόμα και όταν ο μέγιστος αριθμός συνδέσεων έχει "
-"καλυθφεί; Απαιτείται για τις περισσότερες λειτουργίες διαχείρισης όπως ο "
-"ορισμός γενικών μεταβλητών ή τη διακοπή λειτουργιών άλλων χρηστών."
+"καλυθφεί, το οποίο απαιτείται για τις περισσότερες λειτουργίες διαχείρισης "
+"όπως ο ορισμός γενικών μεταβλητών ή τη διακοπή λειτουργιών άλλων χρηστών."
 
 #: server_privileges.php:65 server_privileges.php:276
 #: server_privileges.php:635
