--- a/po/de.po
+++ b/po/de.po
@@ -1385,10 +1385,9 @@ msgid "Sum of grouped rows:"
 msgstr "Anzahl der gruppierten Datensätze"
 
 #: js/messages.php:157
-#, fuzzy
 #| msgid "Total"
 msgid "Total:"
-msgstr "Insgesamt"
+msgstr "Insgesamt:"
 
 #: js/messages.php:161 libraries/tbl_properties.inc.php:780
 #: pmd_general.php:388 pmd_general.php:425 pmd_general.php:545
