--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 13:49+0200\n"
+"PO-Revision-Date: 2011-07-29 13:50+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -10979,7 +10979,7 @@ msgstr "Μεταφορά στον αντεγραμμένο πίνακα"
 
 #: tbl_operations.php:590
 msgid "Table maintenance"
-msgstr "Συντήρηση Πίνακα"
+msgstr "Συντήρηση πίνακα"
 
 #: tbl_operations.php:614
 msgid "Defragment table"
