--- a/po/el.po
+++ b/po/el.po
@@ -11077,7 +11077,7 @@ msgstr "Μέγεθος γραμμής"
 
 #: tbl_printview.php:411 tbl_structure.php:926
 msgid " Row size "
-msgstr " Μέγεθος Εγγραφής "
+msgstr " Μέγεθος εγγραφής "
 
 #: tbl_relation.php:276
 #, php-format
