Translation update done using Pootle.

--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 13:50+0200\n"
+"PO-Revision-Date: 2011-07-29 13:51+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -11367,8 +11367,8 @@ msgid ""
 "No themes support; please check your configuration and/or your themes in "
 "directory %s."
 msgstr ""
-"Δεν υποστηρίζονται θέματα. Ελέξτε τις ρυθμίσεις σας και/ή τα θέματά σας στο "
-"φάκελο %s."
+"Δεν υποστηρίζονται θέματα, για αυτό ελέξτε τις ρυθμίσεις σας και/ή τα θέματά "
+"σας στο φάκελο %s."
 
 #: themes.php:41
 msgid "Get more themes!"
