Translation update done using Pootle.

--- a/po/el.po
+++ b/po/el.po
@@ -11404,7 +11404,7 @@ msgstr "Τα στοιχεία ανανεώθηκαν."
 
 #: view_create.php:141
 msgid "VIEW name"
-msgstr "ΠΡΟΒΟΛΗ ονόματος"
+msgstr " Όνομα VIEW"
 
 #: view_operations.php:91
 msgid "Rename view to"
