--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 14:02+0200\n"
+"PO-Revision-Date: 2011-07-29 14:03+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -7827,8 +7827,8 @@ msgid ""
 "third options are the width and the height in pixels."
 msgstr ""
 "Εμφανίζει μία εικόνα και ένα σύνδεσμο, το πεδίο περιέχει το όνομα αρχείου. Η "
-"πρώτη επιλογή είναι ένα πρόθεμα όπως «http://domain.gr», η δεύτερη επιλογή "
-"είναι το πλάτος σε εικονοστοιχεία, η τρίτη είναι το ύψος."
+"πρώτη επιλογή είναι ένα πρόθεμα όπως «http://www.example.com/», η δεύτερη "
+"επιλογή είναι το πλάτος σε εικονοστοιχεία, η τρίτη είναι το ύψος."
 
 #: libraries/transformations/text_plain__link.inc.php:9
 msgid ""
