Translation update done using Pootle.

--- a/po/el.po
+++ b/po/el.po
@@ -7837,8 +7837,8 @@ msgid ""
 "the link."
 msgstr ""
 "Εμφανίζει ένα σύνδεσμο, το πεδίο περιέχει το όνομα αρχείου. Η πρώτη επιλογή "
-"είναι ένα πρόθεμα όπως «http://domain.gr», η δεύτερη επιλογή είναι ένας "
-"τίτλος για τον σύνδεσμο."
+"είναι ένα πρόθεμα όπως «http://www.example.com/», η δεύτερη επιλογή είναι "
+"ένας τίτλος για τον σύνδεσμο."
 
 #: libraries/transformations/text_plain__longToIpv4.inc.php:9
 msgid ""
