--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 14:04+0200\n"
+"PO-Revision-Date: 2011-07-29 14:05+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -995,7 +995,7 @@ msgstr "Αυτή η διαδικασία ίσως κρατήσει αρκετά.
 
 #: js/messages.php:42
 msgid "You are about to DISABLE a BLOB Repository!"
-msgstr "Πρόκειτε να ΑΠΕΝΕΡΓΟΠΟΙΉΣΕΤΕ μια Αποθήκη BLOB!"
+msgstr "Πρόκειτε να DISABLE μια Αποθήκη BLOB!"
 
 #: js/messages.php:43
 #, php-format
