--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 14:05+0200\n"
+"PO-Revision-Date: 2011-07-29 14:06+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -2055,7 +2055,7 @@ msgstr "Ο πίνακας %s μετονομάσθηκε σε %s"
 
 #: libraries/Table.class.php:1274
 msgid "Could not save table UI preferences"
-msgstr "Αδύνατη η αποθήκευση των ρυθμίσεων πίνακα για το περιβάλλον χρήστη"
+msgstr "Αδύνατη η αποθήκευση του πίανακα ρυθμίσεων UI"
 
 #: libraries/Theme.class.php:143
 #, php-format
