--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 14:08+0200\n"
+"PO-Revision-Date: 2011-07-29 14:09+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -5326,8 +5326,8 @@ msgid ""
 "however it can break transactions.)</i>"
 msgstr ""
 "Να επιτρέπεται η διακοπή της εισαγωγής σε περίπτωση που ανιχνευτεί ότι η "
-"εφαρμογή του κώδικα προσεγγίζει το χρονικό όριο. <i>(Αυτό μπορεί να είναι "
-"καλό για εισαγωγή μεγάλων αρχείων, ωστόσο, μπορεί να κόψει τις "
+"εφαρμογή του κώδικα προσεγγίζει το χρονικό όριο PHP. <i>(Αυτό μπορεί να "
+"είναι καλό για εισαγωγή μεγάλων αρχείων, ωστόσο, μπορεί να κόψει τις "
 "μεταφορές.)</i>"
 
 #: libraries/display_import.lib.php:228
