--- a/po/el.po
+++ b/po/el.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 14:16+0200\n"
+"PO-Revision-Date: 2011-07-29 14:17+0200\n"
 "Last-Translator: Panagiotis Papazoglou <papaz_p@yahoo.com>\n"
 "Language-Team: greek <el@li.org>\n"
 "Language: el\n"
@@ -5158,7 +5158,7 @@ msgstr "Η εγγραφή θα ξεκινάει στο:"
 
 #: libraries/display_export.lib.php:166
 msgid "Dump all rows"
-msgstr "Αχρήστευση όλων των γραμμών"
+msgstr "Μετατροπή όλων των γραμμών"
 
 #: libraries/display_export.lib.php:174 libraries/display_export.lib.php:195
 msgid "Output:"
