--- a/po/fr.po
+++ b/po/fr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 15:38+0200\n"
+"PO-Revision-Date: 2011-07-29 15:41+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: french <fr@li.org>\n"
 "Language: fr\n"
@@ -1152,7 +1152,7 @@ msgstr "Mémoire système"
 
 #: js/messages.php:96
 msgid "System swap"
-msgstr ""
+msgstr "Zone d'échange (swap)"
 
 #: js/messages.php:97 libraries/common.lib.php:1274 server_status.php:1433
 msgid "MiB"
