--- a/po/fr.po
+++ b/po/fr.po
@@ -1164,7 +1164,7 @@ msgstr "Kio"
 
 #: js/messages.php:100
 msgid "Average load"
-msgstr ""
+msgstr "Charge moyenne"
 
 #. l10n: Questions is the name of a MySQL Status variable
 #: js/messages.php:102
