--- a/po/fr.po
+++ b/po/fr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 15:41+0200\n"
+"PO-Revision-Date: 2011-07-29 15:42+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: french <fr@li.org>\n"
 "Language: fr\n"
@@ -1182,10 +1182,9 @@ msgid "Settings"
 msgstr "Paramètres"
 
 #: js/messages.php:105
-#, fuzzy
 #| msgid "Remove database"
 msgid "Remove chart"
-msgstr "Supprimer la base de données"
+msgstr "Supprimer le graphique"
 
 #: js/messages.php:106
 msgid "Edit labels and series"
