Translation update done using Pootle.

--- a/po/fr.po
+++ b/po/fr.po
@@ -1216,7 +1216,7 @@ msgstr "Mettre la surveillance en pause"
 
 #: js/messages.php:114
 msgid "general_log and slow_query_log are enabled."
-msgstr ""
+msgstr "general_log et slow_query_log sont activés."
 
 #: js/messages.php:115
 msgid "general_log is enabled."
