--- a/po/fr.po
+++ b/po/fr.po
@@ -1224,7 +1224,7 @@ msgstr "general_log est activé."
 
 #: js/messages.php:116
 msgid "slow_query_log is enabled."
-msgstr ""
+msgstr "slow_query_log est activé."
 
 #: js/messages.php:117
 msgid "slow_query_log and general_log are disabled."
