--- a/po/fr.po
+++ b/po/fr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 15:45+0200\n"
+"PO-Revision-Date: 2011-07-29 15:47+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: french <fr@li.org>\n"
 "Language: fr\n"
@@ -1245,6 +1245,9 @@ msgid ""
 "than %d seconds. It is advisable to set this long_query_time 0-2 seconds, "
 "depending on your system."
 msgstr ""
+"slow_query_log est activé, mais le serveur n'enregistre que les requêtes qui "
+"prennent plus de %d secondes. Il est recommandé de régler long_query_time à "
+"0-2 secondes, selon votre système."
 
 #: js/messages.php:121
 #, php-format
