Translation update done using Pootle.

--- a/po/fr.po
+++ b/po/fr.po
@@ -1252,7 +1252,7 @@ msgstr ""
 #: js/messages.php:121
 #, php-format
 msgid "long_query_time is set to %d second(s)."
-msgstr ""
+msgstr "long_query_time est réglé à %d seconde(s)."
 
 #: js/messages.php:122
 msgid ""
