Translation update done using Pootle.

--- a/po/fr.po
+++ b/po/fr.po
@@ -1264,10 +1264,10 @@ msgstr ""
 
 #. l10n: %s is FILE or TABLE
 #: js/messages.php:124
-#, fuzzy, php-format
+#, php-format
 #| msgid "Save output to a file"
 msgid "Set log_output to %s"
-msgstr "Diriger la sortie vers un fichier"
+msgstr "Régler log_output à %s"
 
 #. l10n: Enable in this context means setting a status variable to ON
 #: js/messages.php:126
