--- a/po/fr.po
+++ b/po/fr.po
@@ -1271,10 +1271,10 @@ msgstr "Régler log_output à %s"
 
 #. l10n: Enable in this context means setting a status variable to ON
 #: js/messages.php:126
-#, fuzzy, php-format
+#, php-format
 #| msgid "Enabled"
 msgid "Enable %s"
-msgstr "Activé"
+msgstr "Activer %s"
 
 #. l10n: Disable in this context means setting a status variable to OFF
 #: js/messages.php:128
