--- a/po/fr.po
+++ b/po/fr.po
@@ -1278,10 +1278,10 @@ msgstr "Activer %s"
 
 #. l10n: Disable in this context means setting a status variable to OFF
 #: js/messages.php:128
-#, fuzzy, php-format
+#, php-format
 #| msgid "Disabled"
 msgid "Disable %s"
-msgstr "Désactivé"
+msgstr "Désactiver %s"
 
 #. l10n: %d seconds
 #: js/messages.php:130
