--- a/po/fr.po
+++ b/po/fr.po
@@ -1294,6 +1294,8 @@ msgid ""
 "You can't change these variables. Please log in as root or contact your "
 "database administrator."
 msgstr ""
+"Vous ne pouvez changer ces variables. Connectez-vous en tant que root ou "
+"contactez l'administrateur du serveur."
 
 #: js/messages.php:132
 #, fuzzy
