--- a/po/fr.po
+++ b/po/fr.po
@@ -1300,7 +1300,7 @@ msgstr ""
 #: js/messages.php:132
 #| msgid "Manage your settings"
 msgid "Change settings"
-msgstr "Changer les réglages"
+msgstr "Changer les paramètres"
 
 #: js/messages.php:133
 #, fuzzy
