--- a/po/fr.po
+++ b/po/fr.po
@@ -1303,10 +1303,9 @@ msgid "Change settings"
 msgstr "Changer les paramètres"
 
 #: js/messages.php:133
-#, fuzzy
 #| msgid "More settings"
 msgid "Current settings"
-msgstr "Plus de paramètres"
+msgstr "Paramètres courants"
 
 #: js/messages.php:135 server_status.php:1393
 #, fuzzy
