--- a/po/fr.po
+++ b/po/fr.po
@@ -1314,10 +1314,9 @@ msgstr "Titre du graphique"
 
 #. l10n: As in differential values
 #: js/messages.php:137
-#, fuzzy
 #| msgid "Difference"
 msgid "Differential"
-msgstr "Différence"
+msgstr "Différentiel"
 
 #: js/messages.php:138
 #, php-format
