--- a/po/fr.po
+++ b/po/fr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 15:52+0200\n"
+"PO-Revision-Date: 2011-07-29 16:03+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: french <fr@li.org>\n"
 "Language: fr\n"
@@ -1350,6 +1350,8 @@ msgid ""
 "same table are also being grouped together, disregarding of the inserted "
 "data."
 msgstr ""
+"Puisque le groupement des requêtes INSERT a été sélectionné, les requêtes "
+"INSERT vers une même table sont groupées, peu importe les données insérées."
 
 #: js/messages.php:145
 msgid "Log data loaded. Queries executed in this time span:"
