--- a/po/fr.po
+++ b/po/fr.po
@@ -1379,7 +1379,7 @@ msgstr "Filtre"
 
 #: js/messages.php:154
 msgid "Filter queries by word/regexp:"
-msgstr ""
+msgstr "Filtrer les requêtes par mot ou expression régulière :"
 
 #: js/messages.php:155
 msgid "Group queries, ignoring variable data in WHERE statements"
