Translation update done using Pootle.

--- a/po/fr.po
+++ b/po/fr.po
@@ -1391,10 +1391,9 @@ msgid "Sum of grouped rows:"
 msgstr "Somme des lignes regroupées :"
 
 #: js/messages.php:157
-#, fuzzy
 #| msgid "Total"
 msgid "Total:"
-msgstr "Total"
+msgstr "Total :"
 
 #: js/messages.php:161 libraries/tbl_properties.inc.php:780
 #: pmd_general.php:388 pmd_general.php:425 pmd_general.php:545
