--- a/po/fr.po
+++ b/po/fr.po
@@ -1867,7 +1867,7 @@ msgstr "Taille du texte"
 
 #: libraries/File.class.php:220
 msgid "File was not an uploaded file."
-msgstr ""
+msgstr "Le fichier n'était pas un fichier téléversé."
 
 #: libraries/File.class.php:259 libraries/File.class.php:388
 #, fuzzy
