--- a/po/fr.po
+++ b/po/fr.po
@@ -1918,7 +1918,7 @@ msgstr ""
 
 #: libraries/File.class.php:507
 msgid "Error while moving uploaded file."
-msgstr ""
+msgstr "Erreur lors du déplacement du fichier téléversé."
 
 #: libraries/File.class.php:515
 msgid "Cannot read (moved) upload file."
